--- a/style.css
+++ b/style.css
@@ -95,3 +95,8 @@ button.btn:hover {
     text-align: center;
     margin-bottom: 20px;
 }
+.pizza {
+    border:1px solid;
+    margin-bottom: 1em;
+    padding: 1em;
+}
